[gd_scene load_steps=22 format=3 uid="uid://cqfnqpixcdj0q"]

[ext_resource type="Script" path="res://Level_Scenes_objects/Collectables_MapItems/Scripts_Collectables/Key.gd" id="1_61g6f"]
[ext_resource type="Texture2D" uid="uid://bg0pro7xi5xgr" path="res://Level_Scenes_objects/Collectables_MapItems/Assests/key-white.png" id="2_1gy4l"]
[ext_resource type="AudioStream" uid="uid://cnvcnynyaabse" path="res://Sounds/Sounds_Assest/SFX/money-pickup-2-89563.mp3" id="3_7gfg6"]

[sub_resource type="Animation" id="Animation_7kmmo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"key_spin"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uutgi"]
resource_name = "Spin"
loop_mode = 1

[sub_resource type="Animation" id="Animation_3vdg6"]
resource_name = "spin"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"key_spin"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fk8qu"]
_data = {
"RESET": SubResource("Animation_7kmmo"),
"Spin": SubResource("Animation_uutgi"),
"spin": SubResource("Animation_3vdg6")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_3pwtt"]
atlas = ExtResource("2_1gy4l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_krg52"]
atlas = ExtResource("2_1gy4l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ippu4"]
atlas = ExtResource("2_1gy4l")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsdki"]
atlas = ExtResource("2_1gy4l")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_57bwy"]
atlas = ExtResource("2_1gy4l")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jv6x"]
atlas = ExtResource("2_1gy4l")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x573"]
atlas = ExtResource("2_1gy4l")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaem4"]
atlas = ExtResource("2_1gy4l")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc5sw"]
atlas = ExtResource("2_1gy4l")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oektu"]
atlas = ExtResource("2_1gy4l")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3l1a"]
atlas = ExtResource("2_1gy4l")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k86ex"]
atlas = ExtResource("2_1gy4l")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kjhba"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pwtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krg52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ippu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsdki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57bwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jv6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x573")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaem4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc5sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oektu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3l1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k86ex")
}],
"loop": true,
"name": &"key_spin",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l3ftu"]
radius = 5.0
height = 28.0

[node name="key" type="Area2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_61g6f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fk8qu")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kjhba")
animation = &"key_spin"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_l3ftu")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7gfg6")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
